# mcp-kql-server

./: .gitignore  CONTRIBUTING.md  LICENSE  Launch Post.markdown  README.markdown  README.md  RELEASE_NOTES.md  SECURITY.md  claude_desktop_config.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
mcp_kql_server/: __init__.py  constants.py  execute_kql.py  kql_auth.py  mcp_server.py  memory.py  utils.py
tests/: __init__.py  test_mcp_server.py  test_memory.py  test_utils.py
