[project]
   name = "mcp-kql-server"
   version = "1.0.1"
   description = "MCP server for executing KQL queries with Azure authentication"
   authors = [{ name = "Arjun Trivedi" }]
   readme = "README.md"
   requires-python = ">=3.10"
   dependencies = [
       "azure-kusto-data",
       "tenacity",
       "werkzeug",
       "fastmcp",
       "tabulate",
       "pydantic",
   ]

   [tool.uv]
   index-strategy = "unsafe-best-match"

   [tool.hatch.build.targets.wheel]
   packages = ["mcp_kql_server"]

   [build-system]
   requires = ["hatchling"]
   build-backend = "hatchling.build"
